[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lard"
version = "0.0.1"
authors = [
  { name="Oluwafemi Sule", email="oluwafemisule@outlook.com" },
]
description = "Load Redshift Data."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/osule/lard"
"Bug Tracker" = "https://github.com/osule/lard/issues"