[metadata]
name = lard
version = attr: lard.VERSION
description = The load part of ELT with Airflow
author = Oluwafemi Sule
url = https://github.com/osule/lard
keywords = airflow-redshift, ELT
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files =
   LICENSE
classifiers =
    Development Status :: 5 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Monitoring
    Framework :: Apache Airflow
python_requires = >=3.7, <4
install_requires =
   apache_airflow>=2.3.3
   apache-airflow-providers-postgres[amazon]
project_urls =
    Documentation=https://github.com/osule/lard/tree/master/README.md
    Bug Tracker=https://github.com/osule/lard/issues
    Source Code=https://github.com/osule/lard

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src


[options.package_data]
airflow=


[options.extras_require]
dev = ReportLab>=1.2; RXP
test = coverage


[options.data_files]

[options.entry_points]
console_scripts=

[files]
packages = lard